# ChessBrain

./: .gitignore  .specify  AGENTS.md  README.md  alembic.ini  bashrc  pyproject.toml  requirements.txt
ChessBrain/.specify/memory/: constitution.md
ChessBrain/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
draft/: consititution_draft.md  overview.md  spec_draft.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  styles.css
frontend/src/components/Match/: BoardView.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: MatchPage.tsx
frontend/src/types/: session.ts
migrations/: env.py
scripts/demo/: play_vs_ai.sh  run_training_cycle.sh
scripts/tools/: eval_throughput.py  profile_training.py
specs/001-chessbrain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  training_pipeline.md
specs/001-chessbrain/contracts/: openapi.yaml
src/chessbrain/: __init__.py
src/chessbrain/domain/: __init__.py
src/chessbrain/domain/chess/: __init__.py  session_manager.py
src/chessbrain/domain/models/: __init__.py  inference_service.py  move_encoding.py  policy_value_network.py
src/chessbrain/domain/training/: __init__.py  features.py  mcts.py  (+4 more)
src/chessbrain/infrastructure/: __init__.py  config.py
src/chessbrain/interface/: __init__.py
tests/: conftest.py
tests/contract/: test_sessions.py
tests/integration/: test_gameplay_flow.py  test_training_runner.py
tests/unit/: test_move_encoding.py  test_policy_value_network.py  test_training_loop.py
(+14 files in other folders)
