[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.mypy_cache
  | \\.pytest_cache
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["chessbrain"]
skip = ["migrations"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "migrations"]
per-file-ignores = ["__init__.py:F401"]
